410安全扫描修改1

--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
@@ -41,7 +41,7 @@ obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
 
 ### 步骤二：安装 JayDeBeApi 驱动
 
-安装 JayDeBeApi，推荐使用 pip 安装方式，详细信息参见 [使用 pip 安装 JayDeBeApi](https://pypi.org/project/JayDeBeApi/)。
+安装 JayDeBeApi，建议使用 pip 安装方式，详细信息参见 [使用 pip 安装 JayDeBeApi](https://pypi.org/project/JayDeBeApi/)。
 
 ```shell
 //python3 安装 JayDeBeApi
