--- a/zh-CN/7.reference/4.development-reference/2.sql-specifications-and-practices/2.sql-writing-Specification/5.transaction-related-specifications.md
+++ b/zh-CN/7.reference/4.development-reference/2.sql-specifications-and-practices/2.sql-writing-Specification/5.transaction-related-specifications.md
@@ -6,7 +6,7 @@
 
   * 对 where 子句中的 in 列表参数的个数不再限制。
 
-  * 在 OBServer 初始化时，对 memstore 的内存使用率达到 80% 时开启写入进行了限速：
+  * 在 OBServer 节点初始化时，对 MemStore 的内存使用率达到 80% 时开启写入进行了限速：
 
     `alter system set writing_throttling_trigger_percentage = 80 TENANT = ALL;`
 
