--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/2.table-structure-design.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/2.table-structure-design.md
@@ -41,7 +41,7 @@
 | 03   | 02       | 周吾    | 冯沉    |
 | 03   | 03       | 周吾    | 楚卫    |
 
-这张表中的主键为（sno，tno），很明显 每个字段都是原子值不可再分，满足第一范式，但 sname 依赖于 sno，tname 依赖于 tno，不满足第二范式，因此需要对表进行拆分。将 1 张表拆分为 3 张表具体拆分后的字段如下。
+这张表中的主键为（`sno`，`tno`），很明显 每个字段都是原子值不可再分，满足第一范式，但 `sname` 依赖于 `sno`，`tname` 依赖于 `tno`，不满足第二范式，因此需要对表进行拆分。将 1 张表拆分为 3 张表具体拆分后的字段如下。
 
 学生表：
 
@@ -84,7 +84,7 @@
 | 02      | 孙礼    | 01  | 唐朝班   |
 | 03      | 周吾    | 02  | 周朝班   |
 
-从表中明显看出表中各字段皆为原子值，且不存在部分依赖，满足第一、第二范式，但 cname 依赖于 cno，cno 依赖于 tno，存在传递依赖，不满足第三范式。将这张表进行拆分为 2 张表，具体如下：
+从表中明显看出表中各字段皆为原子值，且不存在部分依赖，满足第一、第二范式，但 `cname` 依赖于 `cno`，`cno` 依赖于 `tno`，存在传递依赖，不满足第三范式。将这张表进行拆分为 2 张表，具体如下：
 
 班级表：
 
@@ -109,37 +109,37 @@
 
   * 不是频繁修改的字段。
 
-  * 不是 varchar 超长字段。
+  * 不是 `varchar` 超长字段。
 
 * 建表时应该设定主键。
 
   * 建议使用业务字段做主键或做联合主键，不建议使用自增列做主键。
 
-  * OceanBase 数据库的表存储模型为索引聚集表模型( IOT)，如果用户未指定主键，系统会自动生成一个隐藏主键
+  * OceanBase 数据库的表存储模型为索引聚集表模型(`IOT`)，如果用户未指定主键，系统会自动生成一个隐藏主键
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
     <p>建表后不允许添加主键。</p>
   </main>
 
-* 表必备两字段：gmt_create, gmt_modified。
+* 表必备两字段：`gmt_create`，`gmt_modified`。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>gmt_create，gmt_modified 的类型选择 DATE （精确到秒）或 TIMESTAMP WITH TIME ZONE（精确到微秒，且带当前时区信息），可以使用 sysdate 或 systimestamp 函数。</p>
+    <p><code>gmt_create</code>，<code>gmt_modified</code> 的类型选择 <code>DATE</code> （精确到秒）或 <code>TIMESTAMP WITH TIME ZONE</code>（精确到微秒，且带当前时区信息），可以使用 <code>sysdate</code> 或 <code>systimestamp</code> 函数。</p>
   </main>
   
-* 表、字段需要有 COMMENT 属性。
+* 表、字段需要有 `COMMENT` 属性。
 
-* 表中所有字段推荐是 NOT NULL 属性，业务可以根据需要定义DEFAULT值。
+* 表中所有字段推荐是 `NOT NULL` 属性，业务可以根据需要定义 `DEFAULT` 值。
 
 * 多表中的相同列，必须保证列定义一致。
 
-* 进行 join 的关联字段，数据类型保证一致，避免隐式转换。
+* 进行 `join` 的关联字段，数据类型保证一致，避免隐式转换。
 
-* 不推荐使用复杂的数据类型，如 blob 或者 json。
+* 不推荐使用复杂的数据类型，如 `blob` 或者 `json`。
 
-* 表达是与否概念的字段，推荐数据类型是 unsigned tinyint（1 表示是，0 表示否），值的内容要统一。
+* 表达是与否概念的字段，推荐数据类型是 `unsigned tinyint`（1 表示是，0 表示否），值的内容要统一。
   示例：表达逻辑删除的字段名 `is_deleted`，1 表示删除，0 表示未删除。
 
 * 如果修改字段含义或对字段表示的状态追加时，建议及时更新字段注释。
