--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/3.character-set-specification.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/3.character-set-specification.md
@@ -18,7 +18,7 @@
 
   * 可以在 create tenant 语句添加 charset 设置，添加 `"charset=gbk"`。
 
-    ```sql
+    ```shell
     create tenant oracle replica_num = 1,
     resource_pool_list =('pool1'),
     charset = gbk
@@ -42,23 +42,23 @@
 
 * 设置客户端（链路）字符集
 
-  * 客户端（链路）字符集是配置 client 和 server 之间交互使用的字符集设置。
+  * 客户端（链路）字符集是配置 Client 和 Server 之间交互使用的字符集设置。
 
-    client 将 SQL 字符串的发给 server 执行，server 将执行结果返回给 client，在这个过程中，server 需要明确知道 client 使用的字符集是什么，才能正确的解析，执行和返回结果。在不同环境下，client 可以是 obclient、jdbc 或 OCI 等，因此有时候也会叫做链路字符集。
+    Client 将 SQL 字符串的发给 Server 执行，Server 将执行结果返回给 Client，在这个过程中，Server 需要明确知道 Client 使用的字符集是什么，才能正确的解析，执行和返回结果。在不同环境下，Client 可以是 OBClient、jdbc 或 OCI 等，因此有时候也会叫做链路字符集。
 
   * 租户字符集与客户端字符集没有直接关系，是相互独立配置的。
 
     GBK 租户可以被 GBK 的客户端连接，也可以被 UTF8 的客户端连接。
 
-    * 当客户端字符集为 GBK 时，server 会按照 GBK 解析和执行接收到的 SQL 语句。
+    * 当客户端字符集为 GBK 时，Server 会按照 GBK 解析和执行接收到的 SQL 语句。
 
-    * 当客户端字符集为 UTF8 时，server 会按照 UTF8 解析和执行收到的 SQL 语句。
+    * 当客户端字符集为 UTF8 时，Server 会按照 UTF8 解析和执行收到的 SQL 语句。
 
   * 配置方法
 
     * 永久性修改
 
-      ```sql
+      ```shell
       set global character_set_client = gbk;
       set global character_set_connection = gbk;
       set global character_set_results = gbk;
@@ -68,15 +68,15 @@
 
       * character_set_connection：连接字符集。在 oracle 租户下应设置为与 character_set_client 一致的值。
 
-      * character_set_results：server 返回给 client 结果的字符集。
+      * character_set_results：Server 返回给 Client 结果的字符集。
 
         一般来说，客户端发给服务器，和服务器返回给客户端字符串的字符集是统一的，因此在 Oracle 模式的租户下，这三个值应该保持一致；MySQL 模式使用 3 个变量的作用是可以灵活进行配置，一般使用场景将三个变量都配置成客户端的字符集即可。
 
-    * 临时修改（仅对本Session生效）
+    * 临时修改（仅对本 Session 生效）
 
       * 方法一：
 
-        ```sql
+        ```shell
         set character_set_client = gbk;
         set character_set_connection = gbk;
         set character_set_results = gbk;
@@ -84,7 +84,7 @@
 
       * 方法二：
 
-        ```sql
+        ```shell
         set names gbk;
         ```
 
@@ -92,15 +92,15 @@
 
   * 使用 jdbc 连接 OceanBase 数据库，GBK 链路一般在 url 里修改参数设置，添加 `characterEncoding=gbk`。
 
-    ```unknow
+    ```shell
     String url = "jdbc:oceanbase://xxx.xxx.xxx.xxx:xxxx?useSSL=false&useUnicode=true&characterEncoding=gbk&connectTimeout=30000&rewriteBatchedStatements=true";
     ```
 
-  * 使用 obclient 客户端连接数据库，GBK 链路 bash 环境变量推荐使用 `zh_CN.GBK` 的超集 `zh_CN.GB18030`。
+  * 使用 OBClient 客户端连接数据库，GBK 链路 bash 环境变量推荐使用 `zh_CN.GBK` 的超集 `zh_CN.GB18030`。
 
     * 修改 bash 环境变量
 
-      ```unknow
+      ```shell
       export LANG=zh_CN.GB18030
       export LC_ALL=zh_CN.GB18030
       ```
@@ -109,5 +109,5 @@
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>除了将数据库（observer）配置成 GBK 链路之外，客户端、驱动也要做相应的配置，若环配置错误，可能会显示乱码。</p>
+    <p>除了将数据库（observer 进程）配置成 GBK 链路之外，客户端、驱动也要做相应的配置，若环配置错误，可能会显示乱码。</p>
   </main>
