--- a/zh-CN/7.reference/4.development-reference/2.sql-specifications-and-practices/3.sql-statement-example/3.weak-consistency-read.md
+++ b/zh-CN/7.reference/4.development-reference/2.sql-specifications-and-practices/3.sql-statement-example/3.weak-consistency-read.md
@@ -7,7 +7,7 @@
 * SELECT 查询语句添加 hint
 
   ```sql
-  obclient> SELECT /*+read_consistency(weak)*/ * FROM test WHERE c1=1;
+  SELECT /*+read_consistency(weak)*/ * FROM test WHERE c1=1;
   ```
 
 * session 级别设置系统变量（1=FROZEN、2=WEAK、3=STRONG）
