--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
@@ -62,19 +62,17 @@
   | 别名     | 255 字节。   |
   | 对象名    | 128 字节。   |
 
-  <!--| 表组名    | 128 字节。   |-->
-
-## OBProxy 最大连接数限制
+## ODP 最大连接数限制
 
 |       类型        |         最大限制          |
 |-----------------|---------------------------------------------------|
-| 单个 OBProxy 的连接数 | 由 OBProxy 的 `client_max_connections` 参数控制，默认为 8192。 <blockquote><b>说明</b></br>您可以通过增加 OBProxy 节点数或者修改 `client_max_connections` 配置项值的方式来增大集群的连接总数限制。</blockquote> |
+| 单个 ODP 的连接数 | 由 ODP 的 `client_max_connections` 参数控制，默认为 8192。 <blockquote><b>说明</b></br>您可以通过增加 ODP 节点数或者修改 `client_max_connections` 配置项值的方式来增大集群的连接总数限制。</blockquote> |
 
 ## 分区副本数限制
 
 |         类型         |                                        最大限制                                         |
 |--------------------|-----------------------------|
-| 每个 OBServer 的分区副本数 | 无严格限制。 <blockquote>**说明** </br> 每个 OBServer 的分区副本数可根据租户内存大小来预估，1G 内存约支持约 2 万 tablet。</blockquote> |
+| 每个 OBServer 节点的分区副本数 | 无严格限制。 <blockquote>**说明** </br> 每个 OBServer 节点的分区副本数可根据租户内存大小来预估，1G 内存约支持约 2 万 tablet。</blockquote> |
 
 ## 单个表的限制
 
