feat(link): 中文目录跳转链接处理

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
@@ -13,7 +13,7 @@
      <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。</p>
   </main>
 
-* 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+* 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 使用 DELETE 语句删除数据
 
