410MySQL连接同步驱动版本修改

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/7.commonpool-configuration-example-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/7.commonpool-configuration-example-of-mysql-mode.md
@@ -7,90 +7,90 @@
 结合 hibernate 及 commonpool 对 oceanbase 数据库进行操作。
 
 ```xml
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-            <version>2.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.0.7.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-ehcache</artifactId>
-            <version>4.3.11.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alipay.oceanbase</groupId>
-            <artifactId>oceanbase-client</artifactId>
-            <version>3.2.3</version>
-        </dependency>
-    </dependencies>
+<dependencies>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-pool2</artifactId>
+        <version>2.7.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>5.0.7.Final</version>
+    </dependency>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-ehcache</artifactId>
+        <version>4.3.11.Final</version>
+    </dependency>
+    <dependency>
+        <groupId>com.oceanbase</groupId>
+        <artifactId>oceanbase-client</artifactId>
+        <version>2.4.0</version>
+    </dependency>
+</dependencies>
 ```
 
 ### 实体类
 
-```unknow
+```java
 import javax.persistence.*;
 
 @Entity 
 @Table(name = "user_test")
 public class User { 
 
- public User() { }  
- 
- @Id 
-    //oracle模式不支持该主键自增
- //@GeneratedValue(strategy = GenerationType.IDENTITY)
- private Integer id; 
- 
- @Column 
- private String username; 
+  public User() { }  
 
- @Column 
- private String birthday;
+  @Id 
+      //oracle模式不支持该主键自增
+  //@GeneratedValue(strategy = GenerationType.IDENTITY)
+  private Integer id; 
 
- public User(Integer id, String username, String birthday) {
-  this.id = id;
-  this.username = username;
-  this.birthday = birthday;
- }
+  @Column 
+  private String username; 
 
- public Integer getId() {
-  return id;
- }
+  @Column 
+  private String birthday;
 
- public void setId(Integer id) {
-  this.id = id;
- }
+  public User(Integer id, String username, String birthday) {
+    this.id = id;
+    this.username = username;
+    this.birthday = birthday;
+  }
 
- public String getUsername() {
-  return username;
- }
+  public Integer getId() {
+    return id;
+  }
 
- public void setUsername(String username) {
-  this.username = username;
- }
+  public void setId(Integer id) {
+    this.id = id;
+  }
 
- public String getBirthday() {
-  return birthday;
- }
+  public String getUsername() {
+    return username;
+  }
 
- public void setBirthday(String birthday) {
-  this.birthday = birthday;
- }
+  public void setUsername(String username) {
+    this.username = username;
+  }
 
- @Override
- public String toString() {
-  return "User{" +
-    "id=" + id +
-    ", username='" + username + '\'' +
-    ", birthday='" + birthday + '\'' +
-    '}';
- }
+  public String getBirthday() {
+    return birthday;
+  }
+
+  public void setBirthday(String birthday) {
+    this.birthday = birthday;
+  }
+
+  @Override
+  public String toString() {
+    return "User{" +
+      "id=" + id +
+      ", username='" + username + '\'' +
+      ", birthday='" + birthday + '\'' +
+      '}';
+  }
 }
 ```
 
@@ -145,7 +145,7 @@ hibernate 配置文件：
         <!-- 可选配置 -->
       
         <!--是否支持方言  -->
-    <!--<property name="dialect">org.hibernate.dialect.MySQLDialect</property>-->
+        <!--<property name="dialect">org.hibernate.dialect.MySQLDialect</property>-->
       
         <!--在oracle模式下，必须有如下配置-->
         <property name="dialect">org.hibernate.dialect.Oracle10gDialect</property>
@@ -154,8 +154,8 @@ hibernate 配置文件：
         <property name="show_sql">true</property>
       
         <!--自动建表 该处注释根据需求打开或关闭-->
-    <!--<property name="hbm2ddl.auto">update</property>-->
-    <!--<property name="hbm2ddl.auto">create</property>-->
+        <!--<property name="hbm2ddl.auto">update</property>-->
+        <!--<property name="hbm2ddl.auto">create</property>-->
 
         <!-- 资源注册，此处即为实体类映射文件路径 -->
         <mapping resource="./UserModel.hbm.xml"/>
