--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
@@ -6,14 +6,14 @@
 
 ```java
 <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
+   <groupId>com.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
 </dependency>
 <dependency>
    <groupId>org.springframework.data</groupId>
    <artifactId>spring-data-jpa</artifactId>
-    <version>1.10.1.RELEASE</version>
+   <version>1.10.1.RELEASE</version>
 </dependency>
 
 
@@ -150,9 +150,9 @@ useUnicode=true&characterEncoding=utf-8
       <version>****</version>
   </dependency>
   <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
+   <groupId>com.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
   </dependency>
   <!-- 其余部分略 -->
 ```
