--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/13.connect-to-the-oceanbase-database-through-mybatis-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/13.connect-to-the-oceanbase-database-through-mybatis-of-mysql-mode.md
@@ -6,9 +6,9 @@
 
 ```java
 <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
+   <groupId>com.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
 </dependency>
 <dependency>
    <groupId>org.mybatis</groupId>
