--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
@@ -19,9 +19,9 @@
   </dependency>
   <!--数据库驱动-->
   <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
+   <groupId>com.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
   </dependency>
   <!--连接池-->
   <dependency>
